@@ -52,7 +52,11 @@ Version 8.30
 13. Applied Dmitry V. Levin's patch for a more portable method for linking with
     -lreadline.
     
-14. ZH added PCRE_CONFIG_JITTARGET; added it's output to pcretest -C. 
+14. ZH added PCRE_CONFIG_JITTARGET; added its output to pcretest -C. 
+
+15. Applied Graycode's patch to put the top-level frame on the stack rather 
+    than the heap when not using the stack for recursion. This gives a 
+    performance improvement in many cases when recursion is not deep.
 
 
 Version 8.21 12-Dec-2011
